project/todo-app/manifests/base/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-clusterip
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 4000
